<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modify_title"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="5dp"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tv_modify_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modify_username"
        android:gravity="center"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:textSize="16sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/black"></View>

    <TextView
        android:id="@+id/tv_modify_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modify_email"
        android:gravity="center"
        android:padding="5dp"
        android:textSize="16sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/black"></View>

    <TextView
        android:id="@+id/tv_modify_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modify_password"
        android:gravity="center"
        android:padding="5dp"
        android:textSize="16sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/black"></View>

    <TextView
        android:id="@+id/tv_modify_2fa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modify_2fa"
        android:gravity="center"
        android:padding="5dp"
        android:textSize="16sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/black"></View>

    <Button
        android:id="@+id/btn_done"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/modify_done"
        android:textAllCaps="false"
        android:layout_marginTop="10dp"
        android:background="#65bed0"
        android:textColor="@color/white"
        android:layout_marginBottom="15dp"/>
</LinearLayout>