<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/home_title"
            android:textSize="28sp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:layout_marginTop="50dp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <LinearLayout
            android:id="@+id/ll_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintRight_toRightOf="parent">
            <TextView
                android:id="@+id/tv_top_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_top_title"
                android:textSize="16sp"
                android:textAlignment="textEnd"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tv_bold_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/splash_text"
                android:textSize="16sp"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:layout_marginLeft="5dp"
                android:textStyle="bold"/>
        </LinearLayout>

        <View
            android:id="@+id/split1"
            android:background="#eee"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginTop="30dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_top"
            tools:ignore="NotSibling" />

        <ImageView
            android:id="@+id/iv_icon1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/splash_icon"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/split1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/recommended_videoes"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintLeft_toRightOf="@id/iv_icon1"
            app:layout_constraintBottom_toBottomOf="@id/iv_icon1"/>

        <HorizontalScrollView
            android:id="@+id/sv_videos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_icon1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <GridView
                    android:id="@+id/gv_videos"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </GridView>
            </LinearLayout>
        </HorizontalScrollView>

        <View
            android:id="@+id/split2"
            android:background="#eee"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginTop="30dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sv_videos"/>

        <ImageView
            android:id="@+id/iv_icon2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/splash_icon"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/split2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/recommended_search"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintLeft_toRightOf="@id/iv_icon2"
            app:layout_constraintBottom_toBottomOf="@id/iv_icon2"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_icon2">
            <ImageView
                android:id="@+id/iv_bottom_icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:src="@mipmap/bottom_icon"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>

